src/components/Book/NewBook/AnimatedPage/AnimatedPage.module.css
.page {
  position: absolute;
  top: 0;
  left: 0;
  width: 50%;
  height: 100%;
  touch-action: none;
  z-index: 5;
  user-select: none;

  &.right:not(.onePage) {
    left: 50%;
  }
  perspective: 1500px;

  &.below {
    z-index: 4;
    width: 50%;
    &.right:not(.onePage) {
      left: 50%;
    }
  }
  &.back {
    z-index: 3;
  }
}

